# candles-history-api

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: lib.rs  main.rs  settings.rs
src/app/: app.rs
src/cache/: candle_history_cache.rs  mod.rs  save_queue.rs
src/cache/models/: candle.rs  mod.rs
src/grpc_client/: candles_grpc.rs
src/http/controllers/: candles.rs
