[package]
name = "candles-history-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-controllers = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
is-alive-middleware = { branch = "0.1.3", git = "https://github.com/ReachPay/is-alive-middleware.git" }

my-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
my-seq-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-seq-logger.git" }

my-telemetry = { branch = "0.2.1", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }
my-settings-reader = { branch = "0.1.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

flurl = { branch = "0.2.1", git = "https://github.com/MyJetTools/fl-url.git" }
rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }

async-trait = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
prost = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
tokio-util = "*"
futures = "*"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
